added link to jQuery CDN to end of <body>, moved link to atm.js from <head> to below jQuery CDN link, and tested to make sure jQuery was working.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
   </head>
   <body>
     <div class="header">
@@ -25,7 +24,9 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
-    <!-- Add a link to a jQuery CDN here. -->
-    <!-- Cut the link to atm.js from the <head> (see above), and paste it here.-->
+    <!-- DONE: Add a link to a jQuery CDN here. -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- DONE: Cut the link to atm.js from the <head> (see above), and paste it here.-->
+    <script src="atm.js"></script>
   </body>
 </html>
