--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="checking" class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
+      <div id="balanceChecking">$0</div>
       <input id="inputChecking" type="text" placeholder="enter an amount" />
       <input id="depositChecking" type="button" value="Deposit" />
       <input id="withdrawChecking" type="button" value="Withdraw" />
@@ -21,7 +21,7 @@
 
     <div id="savings" class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
+      <div id="balanceSavings">$0</div>
       <input id="inputSavings" type="text" placeholder="enter an amount" />
       <input id="depositSavings" type="button" value="Deposit" />
       <input id="withdrawSavings" type="button" value="Withdraw" />
