completed first three steps

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
   </head>
   <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <div class="header">
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
@@ -28,4 +28,5 @@
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
   </body>
+  <script src="atm.js"></script>
 </html>
