--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="checking" class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
+      <div class="balance checkBal">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
@@ -23,8 +23,8 @@
       <h2>Savings</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
-      <button class="deposit" value="Deposit">Deposit</button>
-      <button class="Withdraw" value="Withdraw">Withdraw</button>
+      <input class="deposit" type="button" value="Deposit">
+      <input class="withdraw" type="button" value="Withdraw">
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
       <script src="atm.js"></script>
       </script>
