checking and saving both work

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <div id="savings" class="account">
       <h2>Savings</h2>
       <div class="savingbalance">0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <input id="savingdepo" type="text" placeholder="enter an amount" />
+      <input class="savingdeposit" type="button" value="Deposit" />
+      <input class="savingwithdraw" type="button" value="Withdraw" />
     </div>
   </body>
 </html>
