--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <div id="checking" class="account">
       <h2>Checking</h2>
-      <div class="balance checkingBal">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" value="100" />
+      <div class="balance">$0</div>
+      <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
