--- a/index.html
+++ b/index.html
@@ -10,23 +10,21 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    <div id="checking" class="account">
+    <div id="checking" class="account zero">
       <h2>Checking</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
-    <div id="savings" class="account">
+    <div id="savings" class="account zero">
       <h2>Savings</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
-    <!-- DONE: Add a link to a jQuery CDN here. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- DONE: Cut the link to atm.js from the <head> (see above), and paste it here.-->
     <script src="atm.js"></script>
   </body>
 </html>
