removed the dollar for now try to fix next commit

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </div>
     <div id="checking" class="account">
       <h2>Checking</h2>
-      <div class="balance" id="checkbal">$0</div>
+      <div class="balance" id="checkbal">0</div>
       <input class="input" type="text" id="inputCheck" placeholder="enter an amount" />
       <input class="deposit" type="button" id="checkD" value="Deposit" />
       <input class="withdraw" type="button" id="checkW" value="Withdraw" />
     </div>
     <div id="savings" class="account">
       <h2>Savings</h2>
-      <div class="balance" id="savebal">$0</div>
+      <div class="balance" id="savebal">0</div>
       <input class="input" type="text" id="inputSaving" placeholder="enter an amount" />
       <input class="deposit" type="button" id="savingsD" value="Deposit" />
       <input class="withdraw" type="button" id="savingsW" value="Withdraw" />
