changed initial .balance inner html's to 0 and initial account classes back to 'account' so the user does not have red in their face right away; made some minor, irrational tweaks

--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
   </head>
   <body>
     <div class="header">
-      <div><img src="ga.png" /></div>
+      <div><img src="ga.png"></div>
       <div class="title">Bank of GA</div>
     </div>
-    <div id="checking" class="account zero">
+    <div id="checking" class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div class="balance">$10</div>
+      <input class="input" type="text" placeholder="enter an amount">
+      <input class="deposit" type="button" value="Deposit">
+      <input class="withdraw" type="button" value="Withdraw">
     </div>
-    <div id="savings" class="account zero">
+    <div id="savings" class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div class="balance">$10</div>
+      <input class="input" type="text" placeholder="enter an amount">
+      <input class="deposit" type="button" value="Deposit">
+      <input class="withdraw" type="button" value="Withdraw">
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="atm.js"></script>
