--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
       <div class="title">Bank of GA</div>
     </div>
 
-    <div id="checking" class="account">
+    <div id="checking" class="account zero">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
+      <input class="input" type="number" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
-    <div id="savings" class="account">
+    <div id="savings" class="account zero">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
+      <input class="input" type="number" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
