did some refactoring

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>ATM</title>
@@ -14,15 +14,15 @@
       <h2>Checking</h2>
       <div class="balance">$10</div>
       <input class="input" type="text" placeholder="enter an amount">
-      <input class="deposit updater" type="button" value="Deposit">
-      <input class="withdraw updater" type="button" value="Withdraw">
+      <input class="deposit" type="button" value="Deposit">
+      <input class="withdraw" type="button" value="Withdraw">
     </div>
     <div id="savings" class="account">
       <h2>Savings</h2>
       <div class="balance">$10</div>
       <input class="input" type="text" placeholder="enter an amount">
-      <input class="deposit updater" type="button" value="Deposit">
-      <input class="withdraw updater" type="button" value="Withdraw">
+      <input class="deposit" type="button" value="Deposit">
+      <input class="withdraw" type="button" value="Withdraw">
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="atm.js"></script>
