Completed ATM with Bonuses

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <title>ATM</title>
+    <title>Goliath National Bank</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
   </head>
   <body>
     <div class="header">
-      <div><img src="ga.png" /></div>
-      <div class="title">Bank of GA</div>
+      <div><img src="GNB.jpg" /></div>
+      <div class="title">Goliath National Bank - FDIC</div>
     </div>
 
     <div id="checking" class="account">
@@ -27,5 +26,7 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="atm.js"></script>
   </body>
 </html>
