Trying to get the deposit to add to the balance

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div id="checking" class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
+      <!-- <input class="input" type="text" placeholder="enter an amount" /> -->
+      <input class="input" type="text" placeholder="enter an amount"/>
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
