--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
   </body>
 </html>
