--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
+    
+    
+   <!--  <script src="atm.js"></script>
+    <scri -->pt src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   </head>
   <body>
     <div class="header">
@@ -27,5 +30,8 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="atm.js"></script>
   </body>
 </html>
