--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="atm.js"></script>
   </head>
   <body>
@@ -14,18 +15,19 @@
 
     <div id="checking" class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div id="checking-balance" class="balance">$0</div>
+      <input id="checking-input" class="input" type="text" placeholder="enter an amount" />
+      <input id="checking-deposit"class="deposit" type="button" value="Deposit" />
+      <input id="checking-withdraw" class="withdraw" type="button" value="Withdraw" />
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div id="savings-balance" class="balance">$0</div>
+      <input id="savings-input" class="input" type="text" placeholder="enter an amount" />
+      <input id="savings-deposit" class="deposit" type="button" value="Deposit" />
+      <input id="savings-withdraw" class="withdraw" type="button" value="Withdraw" />
     </div>
+
   </body>
 </html>
