--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h2>Savings</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
+      <input class="c" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
   
