--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
+
   </head>
   <body>
     <div class="header">
@@ -15,9 +15,9 @@
     <div id="checking" class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <input class="checkingInput" type="text" placeholder="enter an amount"/>
+      <input class="checkingDeposit" type="button" value="Deposit" />
+      <input class="checkingWithdraw" type="button" value="Withdraw" />
     </div>
 
     <div id="savings" class="account">
@@ -27,5 +27,8 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="atm.js"></script>
   </body>
 </html>
