--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="atm.js"></script>
   </head>
   <body>
@@ -12,7 +13,7 @@
       <div class="title">Bank of GA</div>
     </div>
 
-    <div id="checking" class="account">
+    <div id="checking" class="zero account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
@@ -20,12 +21,14 @@
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
-    <div id="savings" class="account">
+    <div id="savings" class="zero account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="atm.js"></script>
   </body>
 </html>
