--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="atm.js"></script>
   </head>
+<!--added zero class to body to change color to red via css-->
   <body>
     <div class="header">
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
 
-    <div id="checking" class="account">
+    <div id="checking" class="zero account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
@@ -22,7 +23,7 @@
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
-    <div id="savings" class="account">
+    <div id="savings" class="zero account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
