created Checking and Saving functions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   </head>
   <body>
     <div class="header">
@@ -14,18 +14,19 @@
 
     <div id="checking" class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div id="checkingBalance" class"balance">$0</div>
+      <input id="checkingAmount" type="text" placeholder="enter an amount" />
+      <input id="checkingDeposit" type="button" value="Deposit" />
+      <input id="withdrawDepositt" type="button" value="Withdraw" />
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div id="savingBalance">$0</div>
+      <input id="savingAmount" type="text" placeholder="enter an amount" />
+      <input id="savingDepositt" type="button" value="Deposit" />
+      <input id="withdrawDeposit" type="button" value="Withdraw" />
     </div>
+    <script src="atm.js"></script>
   </body>
 </html>
