--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
 <html>
   <head>
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="atm.js"></script>
   </head>
   <body>
