--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
+
   </head>
   <body>
     <div class="header">
@@ -27,5 +27,8 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+<script src="https://code.jquery.com/jquery-3.2.1.js" charset="utf-8"></script>
+<script src="atm.js"></script>
   </body>
+
 </html>
