finish with overdraft

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="title">Bank of GA</div>
     </div>
 
-    <div id="checking" class="account">
+    <div id="checking" class="zero">
       <h2>Checking</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
@@ -20,7 +20,7 @@
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
-    <div id="savings" class="account">
+    <div id="savings" class="zero">
       <h2>Savings</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
