--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>ATM</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
+
+
   </head>
   <body>
     <div class="header">
@@ -27,5 +27,11 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+    <script
+        src="https://code.jquery.com/jquery-3.2.1.js"
+        integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+        crossorigin="anonymous"></script>
+        <script src="atm.js"></script>
+        <link rel="stylesheet" href="atm.css">
   </body>
 </html>
