--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+
     <script src="atm.js"></script>
   </head>
   <body>
